# Computergrafik

./: CGUtilities.cpp  CGUtilities.h  CMakeLists.txt  SimpleRayTracer.cpp  SimpleRayTracer.h  color.cpp  main.cpp  rgbimage.cpp  vector.cpp
CG_Helpers/: rgbimage.cpp  test3.cpp  vector.cpp  vector.h
